--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ django-filter==22.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 mypy-extensions==0.4.3
-mysqlclient==2.1.1
 pathspec==0.9.0
 platformdirs==2.5.2
+psycopg2==2.9.3
 PyJWT==2.4.0
 pytz==2022.1
 sqlparse==0.4.2
