--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,21 @@
 version: '3'
 
 services:
-  # prosinic:
-  #   build: 
-  #     context: .
-  #     dockerfile: DockerFile
-  #   volumes:
-  #     - .:/prosinic_backend_core
-  #   restart: always
-  #   ports:
-  #     - "8000:8000"
-  #   networks:
-  #     - prosonic_network
-  #     - nginx_netword
+  prosinic:
+    build: 
+      context: .
+      dockerfile: DockerFile
+    volumes:
+      - .:/prosinic_backend_core
+      - prosonic_uploads_volume:/prosinic_backend_core/uploads
+    restart: always
+    ports:
+      - "8000:8000"
+    networks:
+      - postgres_network
+    depends_on:
+      - prosonic_postgresql
+
   prosonic_postgresql:
     image: postgres:14.4
     container_name: prosonic_postgresql
@@ -29,6 +32,8 @@ services:
 volumes:
   prosonic_postgresql:
     external: true 
+  prosonic_uploads_volume:
+    external: true  
 networks:
   postgres_network:
     external: true 
