--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-filter==22.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.21.3
+gunicorn==20.1.0
 idna==3.3
 inflection==0.5.1
 itypes==1.2.0
@@ -18,6 +19,7 @@ MarkupSafe==2.1.1
 mypy-extensions==0.4.3
 packaging==21.3
 pathspec==0.9.0
+Pillow==9.2.0
 platformdirs==2.5.2
 psycopg2==2.9.3
 PyJWT==2.4.0
