--- a/DockerFile
+++ b/DockerFile
@@ -4,14 +4,16 @@ LABEL MAINTAINER="Mahmoud Eslami | mahmoudeslami@hotmail.com"
 ENV PYTHONUNBUFFERED 1
 
 # Set working directory
-RUN mkdir /prosonic
-WORKDIR /prosonic
-COPY . /prosonic
+RUN mkdir /prosonic_backend_core
+WORKDIR /prosonic_backend_core
+COPY . /prosonic_backend_core
 
 # Installing requirements
-ADD requirements.txt /prosonic
+ADD requirements.txt /prosonic_backend_core
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
+# Collect static files
+RUN python manage.py collectstatic --no-input
 
-CMD [ "python","manage.py","runserver" ]
+CMD ["gunicorn", "--chdir", "prosonic_backend_core", "--bind", ":8000", "prosonic_backend_core.wsgi:application"]
