--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3'
 
 services:
-  prosinic:
-    build: 
-      context: .
-      dockerfile: DockerFile
-    volumes:
-      - .:/prosinic_backend_core
-      - prosonic_uploads_volume:/prosinic_backend_core/uploads
-    restart: always
-    ports:
-      - "8000:8000"
-    networks:
-      - postgres_network
-    depends_on:
-      - prosonic_postgresql
+  # prosinic:
+  #   build: 
+  #     context: .
+  #     dockerfile: DockerFile
+  #   volumes:
+  #     - .:/prosinic_backend_core
+  #     - prosonic_uploads_volume:/prosinic_backend_core/uploads
+  #   restart: always
+  #   ports:
+  #     - "8000:8000"
+  #   networks:
+  #     - postgres_network
+  #   depends_on:
+  #     - prosonic_postgresql
 
   prosonic_postgresql:
     image: postgres:14.4
