--- a/DockerFile
+++ b/DockerFile
@@ -1,19 +1,29 @@
 FROM python:3.9.13
 LABEL MAINTAINER="Mahmoud Eslami | mahmoudeslami@hotmail.com"
 
-ENV PYTHONUNBUFFERED 1
+# setup environment variable  
+ENV DockerHOME=/prosonic
 
-# Set working directory
-RUN mkdir /prosonic_backend_core
-WORKDIR /prosonic_backend_core
-COPY . /prosonic_backend_core
+# set work directory 
+RUN mkdir -p $DockerHOME  
 
-# Installing requirements
-ADD requirements.txt /prosonic_backend_core
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+# where your code lives  
+WORKDIR $DockerHOME  
 
-# Collect static files
+# set environment variables  
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1  
+
+# install dependencies  
+RUN pip install --upgrade pip  
+
+# copy whole project to your docker home directory. 
+COPY . $DockerHOME  
+# run this command to install all dependencies  
+RUN pip install -r requirements.txt  
+
 RUN python manage.py collectstatic --no-input
-
-CMD ["gunicorn", "--chdir", "prosonic_backend_core", "--bind", ":8000", "prosonic_backend_core.wsgi:application"]
+# port where the Django app runs  
+EXPOSE 8000  
+# start server  
+CMD python manage.py makemigrations ; python manage.py migrate  --no-input; python manage.py runserver 0.0.0.0:8000 ;
