--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - .:/prosinic
       - ./uploads:/prosonic/uploads
-      - ./prosonic_backend_core/static:/prosonic/static
+      - ./static:/prosonic/static
     restart: always
     ports:
       - "8080:8080"
