--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ click==8.1.3
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.1
+django-ckeditor==6.5.0
 django-cors-headers==3.13.0
 django-filter==22.1
+django-js-asset==2.0.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.21.3
